[package]
name = "mdbook-linkcheck2"
version = "0.7.7"
authors = [
    "Michael Bryan <michaelfbryan@gmail.com>",
    "Martin Liška <martin.liska@hey.com>",
]
description = "A backend for `mdbook` which will check your links for you."
license = "MIT"
edition = "2021"
documentation = "https://docs.rs/mdbook-linkchec2"
repository = "https://github.com/marxin/mdbook-linkcheck2"
readme = "README.md"
rust-version = "1.70"

[[bin]]
name = "mdbook-linkcheck"
path = "src/bin/mdbook-linkcheck.rs"
doc = false

[dependencies]
anyhow = "1"
codespan = { version = "0.11.1" }
codespan-reporting = "0.11"
dunce = "1"
env_logger = "0.11"
http = "1.1"
linkcheck2 = "0.5.0"
log = "0.4"
mdbook = { version = "0.4", default-features = false }
pulldown-cmark = "0.12.2"
regex = "1"
reqwest = "0.12.8"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
structopt = "0.3"
tokio = { version = "1.40", features = ["rt-multi-thread"] }

[dev-dependencies]
pretty_assertions = "1"
toml = "0.8"

[workspace]
members = ["xtask"]

[badges]
maintenance = { status = "passively-maintained" }
