[package]
name = "mdbook-linkcheck2"
version = "0.8.2"
authors = [
    "Michael Bryan <michaelfbryan@gmail.com>",
    "Martin Liška <martin.liska@hey.com>",
]
description = "A backend for `mdbook` which will check your links for you."
license = "MIT"
edition = "2021"
documentation = "https://docs.rs/mdbook-linkcheck2"
repository = "https://github.com/marxin/mdbook-linkcheck2"
readme = "README.md"
rust-version = "1.70"

[[bin]]
name = "mdbook-linkcheck2"
path = "src/bin/mdbook-linkcheck.rs"
doc = false

[dependencies]
anyhow = "1.0.95"
codespan = { version = "0.11.1" }
codespan-reporting = "0.11"
dunce = "1"
env_logger = "0.11.6"
http = "1.2"
linkcheck2 = "0.6.0"
log = "0.4"
mdbook = { version = "0.4.43", default-features = false }
pulldown-cmark = "0.12.2"
regex = "1.11.1"
reqwest = "0.12.11"
semver = "1.0.24"
serde = { version = "1.0.217", features = ["derive"] }
serde_derive = "1.0.217"
serde_json = "1.0.134"
structopt = "0.3"
tokio = { version = "1.42", features = ["rt-multi-thread"] }

[dev-dependencies]
pretty_assertions = "1"
toml = "0.8"

[workspace]
members = ["xtask"]

[badges]
maintenance = { status = "passively-maintained" }
